Corrected text-align: left; to text-align: initial; in local.css

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -86,7 +86,7 @@ footer{
 }
 
 [epub|type~="z3998:recipient"]{
-	text-align: left;
+	text-align: initial;
 }
 
 [epub|type~="z3998:sender"],
